--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,50 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Lato', sans-serif;
 }
 
-img {
-    width: 20px;
+/* nav bar styles */
+nav {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background: green;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 55px;
+    padding: 3px;
+}
+
+.name {
+    justify-self: flex-start;
+    margin-right: auto;
+    font-size: 20px;
+    font-family: 'Hammersmith One', sans-serif;
+}
+
+.links {
+    padding: 15px;
+}
+
+.aboutMe {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 5%;
+    background: lime;
+    padding: 20%;
+}
+
+.headshot {
+    height: 250px;
+    border: solid 2px black;
+}
+
+.infoAboutMe {
+    width: 50%;
+    padding: 5%;
 }
