double checked styles for all view sizes

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ img {
 
 .headshot {
     width: 45%;
-    height: 150px;
+    height: 45%;
     border: solid 2px black;
 }
 
@@ -152,25 +152,14 @@ a.contactFooter{
         font-size: 30px;
     }
 
-    /* About me section */
-    section.aboutMe div {
-        flex-direction: row;
-        width: 100%;
-        justify-content: unset;
-    }
-
     section.aboutMe {
-        height: 100vh;
+        /* height: 100vh; */
+        width: 100%
     }
 
     .headshot {
-        height: 40%;
+        height: 30%;
         border: solid 2px black;
-    }
-
-    .infoAboutMe {
-        width: 50%;
-        padding: 5%;
     }
 
     /* Projects */
@@ -186,8 +175,9 @@ a.contactFooter{
         font-size: 40px;
     }
 
-    p {
-        font-size: 25px;
+   .infoAboutMe, p {
+        font-size: 20px;
+        width: 90%
     }
     
     /* image  */
